# OpenEVA

./: .gitignore  LICENSE  README.md
EVA01/: .env.example  README.md  app.py  eval_pointllm200.py  infer.py  install.sh  pyproject.toml
EVA01/assets/examples/: autumn_tree.glb  exposed_roof_framework.glb  gallery.json  patchwork_teddy_bear.glb
EVA01/src/eva01/: __init__.py  configuration_eva01.py  mesh_und_encoder.py  mesh_und_io.py  metrics.py  modeling_eva01.py  processing_eva01.py  render_judge.py
